manifests/base/deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: app2 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app2
  template:
    metadata:
      labels:
        app: app2 
    spec:
      containers:
        - name: app2 
          image: cepgstapacr.azurecr.io/app2
          ports:
          - containerPort: 8080
