manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: app2
spec:
    ports:
    - port: 8080 
    selector:
        app: app2
